--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
-<title>{% block title %}Welcome{% endblock %} — taipeipyweb</title>
+<title>{% block title %}Welcome{% endblock %} — Taipei.py</title>
 <body>
   <header>
-    <h1>taipeipyweb</h1>
+    <h1><a href="{{ '/'|url }}">Taipei.py</a></h1>
     <nav>
       <ul class="nav navbar-nav">
         <li{% if this._path == '/' %} class="active"{% endif
-          %}><a href="{{ '/'|url }}">Welcome</a></li>
+          %}><a href="{{ '/'|url }}">歡迎來玩！</a></li>
         {% for href, title in [
-          ['/meetups', 'Meetups'],
-          ['/projects', 'Projects'],
+          ['/meetings', '聚會：報名、投稿'],
+          ['/projects', 'Projects On 專案'],
+          ['/history', '歷史紀錄'],
+          ['/resources_contacts_links', '資源、聯絡、連結'],
         ] %}
           <li{% if this.is_child_of(href) %} class="active"{% endif
             %}><a href="{{ href|url }}">{{ title }}</a></li>
@@ -23,6 +25,10 @@
     {% block body %}{% endblock %}
   </div>
   <footer>
-    &copy; Copyright 2015 by Keith Yang.
+    <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">
+      <img src="/ccby4.0.png" /></a>
+    Except where otherwise noted, content on this site is licensed under a
+    <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">
+      Attribution 4.0 International (CC BY 4.0)</a>
   </footer>
 </body>
